--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "ubicash-frontend",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "http://ionicframework.com/",
+  "author": "Jesus Solis",
+  "homepage": "https://github.com/JSolis09",
   "private": true,
   "scripts": {
     "clean": "ionic-app-scripts clean",
