--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
         "@angular/platform-browser": "4.4.4",
         "@angular/platform-browser-dynamic": "4.4.4",
         "@ionic-native/core": "4.3.2",
+        "@ionic-native/facebook": "^4.4.0",
         "@ionic-native/splash-screen": "4.3.2",
         "@ionic-native/status-bar": "4.3.2",
         "@ionic/storage": "2.0.1",
         "build": "^0.1.4",
         "cordova-android": "^6.2.3",
         "cordova-plugin-device": "^1.1.4",
+        "cordova-plugin-facebook4": "^1.9.1",
         "cordova-plugin-ionic-webview": "^1.1.16",
         "cordova-plugin-splashscreen": "^4.0.3",
         "cordova-plugin-whitelist": "^1.3.1",
@@ -48,7 +50,11 @@
             "cordova-plugin-ionic-webview": {},
             "cordova-plugin-splashscreen": {},
             "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {}
+            "ionic-plugin-keyboard": {},
+            "cordova-plugin-facebook4": {
+                "APP_ID": "741335692726218",
+                "APP_NAME": "ubicashDev"
+            }
         },
         "platforms": [
             "android"
