--- a/package.json
+++ b/package.json
@@ -1,77 +1,77 @@
 {
-    "name": "ubicash-frontend",
-    "version": "0.0.1",
-    "author": "Jesus Solis",
-    "homepage": "https://github.com/JSolis09",
-    "private": true,
-    "scripts": {
-        "clean": "ionic-app-scripts clean",
-        "build": "ionic-app-scripts build",
-        "lint": "ionic-app-scripts lint",
-        "ionic:build": "ionic-app-scripts build",
-        "ionic:serve": "ionic-app-scripts serve"
+  "name": "ubicash-frontend",
+  "version": "0.0.1",
+  "author": "Jesus Solis",
+  "homepage": "https://github.com/JSolis09",
+  "private": true,
+  "scripts": {
+    "clean": "ionic-app-scripts clean",
+    "build": "ionic-app-scripts build",
+    "lint": "ionic-app-scripts lint",
+    "ionic:build": "ionic-app-scripts build",
+    "ionic:serve": "ionic-app-scripts serve"
+  },
+  "dependencies": {
+    "@angular/common": "4.4.4",
+    "@angular/compiler": "4.4.4",
+    "@angular/compiler-cli": "4.4.4",
+    "@angular/core": "4.4.4",
+    "@angular/forms": "4.4.4",
+    "@angular/http": "4.4.4",
+    "@angular/platform-browser": "4.4.4",
+    "@angular/platform-browser-dynamic": "4.4.4",
+    "@ionic-native/core": "4.3.2",
+    "@ionic-native/facebook": "^4.4.0",
+    "@ionic-native/geolocation": "^4.4.2",
+    "@ionic-native/google-maps": "^4.4.2",
+    "@ionic-native/splash-screen": "4.3.2",
+    "@ionic-native/status-bar": "4.3.2",
+    "@ionic/storage": "^2.0.1",
+    "build": "^0.1.4",
+    "cordova-plugin-compat": "^1.2.0",
+    "cordova-plugin-device": "^1.1.7",
+    "cordova-plugin-facebook4": "^1.9.1",
+    "cordova-plugin-geolocation": "^2.4.3",
+    "cordova-plugin-googlemaps": "^2.1.1",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.1.2",
+    "ionic-angular": "3.8.0",
+    "ionic-plugin-keyboard": "^2.2.1",
+    "ionicons": "3.0.0",
+    "rxjs": "5.4.3",
+    "sw-toolbox": "3.6.0",
+    "zone.js": "0.8.18",
+    "cordova-android": "~6.3.0"
+  },
+  "devDependencies": {
+    "@ionic/app-scripts": "3.0.1",
+    "typescript": "2.3.4"
+  },
+  "description": "An Ionic project",
+  "cordova": {
+    "plugins": {
+      "cordova-plugin-device": {},
+      "cordova-plugin-ionic-webview": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-whitelist": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-facebook4": {
+        "APP_ID": "741335692726218",
+        "APP_NAME": "ubicashDev"
+      },
+      "cordova-sqlite-storage": {},
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyBt4aYm_p4pHLI0RVVjR13plwkw5aguiJo",
+        "API_KEY_FOR_IOS": "AIzaSyBt4aYm_p4pHLI0RVVjR13plwkw5aguiJo"
+      },
+      "cordova-plugin-geolocation": {
+        "GEOLOCATION_USAGE_DESCRIPTION": "Para ubicarte"
+      }
     },
-    "dependencies": {
-        "@angular/common": "4.4.4",
-        "@angular/compiler": "4.4.4",
-        "@angular/compiler-cli": "4.4.4",
-        "@angular/core": "4.4.4",
-        "@angular/forms": "4.4.4",
-        "@angular/http": "4.4.4",
-        "@angular/platform-browser": "4.4.4",
-        "@angular/platform-browser-dynamic": "4.4.4",
-        "@ionic-native/core": "4.3.2",
-        "@ionic-native/facebook": "^4.4.0",
-        "@ionic-native/geolocation": "^4.4.2",
-        "@ionic-native/google-maps": "^4.4.2",
-        "@ionic-native/splash-screen": "4.3.2",
-        "@ionic-native/status-bar": "4.3.2",
-        "@ionic/storage": "^2.0.1",
-        "build": "^0.1.4",
-        "cordova-android": "^6.2.3",
-        "cordova-plugin-compat": "^1.2.0",
-        "cordova-plugin-device": "^1.1.4",
-        "cordova-plugin-facebook4": "^1.9.1",
-        "cordova-plugin-geolocation": "^2.4.3",
-        "cordova-plugin-googlemaps": "^2.1.1",
-        "cordova-plugin-ionic-webview": "^1.1.16",
-        "cordova-plugin-splashscreen": "^4.0.3",
-        "cordova-plugin-whitelist": "^1.3.1",
-        "cordova-sqlite-storage": "^2.1.2",
-        "ionic-angular": "3.8.0",
-        "ionic-plugin-keyboard": "^2.2.1",
-        "ionicons": "3.0.0",
-        "rxjs": "5.4.3",
-        "sw-toolbox": "3.6.0",
-        "zone.js": "0.8.18"
-    },
-    "devDependencies": {
-        "@ionic/app-scripts": "3.0.1",
-        "typescript": "2.3.4"
-    },
-    "description": "An Ionic project",
-    "cordova": {
-        "plugins": {
-            "cordova-plugin-device": {},
-            "cordova-plugin-ionic-webview": {},
-            "cordova-plugin-splashscreen": {},
-            "cordova-plugin-whitelist": {},
-            "ionic-plugin-keyboard": {},
-            "cordova-plugin-facebook4": {
-                "APP_ID": "741335692726218",
-                "APP_NAME": "ubicashDev"
-            },
-            "cordova-sqlite-storage": {},
-            "cordova-plugin-googlemaps": {
-                "API_KEY_FOR_ANDROID": "AIzaSyBt4aYm_p4pHLI0RVVjR13plwkw5aguiJo",
-                "API_KEY_FOR_IOS": "AIzaSyBt4aYm_p4pHLI0RVVjR13plwkw5aguiJo"
-            },
-            "cordova-plugin-geolocation": {
-                "GEOLOCATION_USAGE_DESCRIPTION": "Para ubicarte"
-            }
-        },
-        "platforms": [
-            "android"
-        ]
-    }
+    "platforms": [
+      "android"
+    ]
+  }
 }
