--- a/package.json
+++ b/package.json
@@ -32,11 +32,11 @@
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-facebook4": "^1.9.1",
     "cordova-plugin-geolocation": "^2.4.3",
-    "cordova-plugin-googlemaps": "^2.1.1",
+    "cordova-plugin-googlemaps": "^2.2.6",
     "cordova-plugin-ionic-webview": "^1.1.16",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.1.2",
+    "cordova-sqlite-storage": "^2.2.1",
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
@@ -64,7 +64,9 @@
       "cordova-sqlite-storage": {},
       "cordova-plugin-googlemaps": {
         "API_KEY_FOR_ANDROID": "AIzaSyBIKuWGRoLfe1sLuMG72_6QwVlmGBMJoNY",
-        "API_KEY_FOR_IOS": "AIzaSyBIKuWGRoLfe1sLuMG72_6QwVlmGBMJoNY"
+        "API_KEY_FOR_IOS": "AIzaSyBIKuWGRoLfe1sLuMG72_6QwVlmGBMJoNY",
+        "PLAY_SERVICES_VERSION": "11.8.0",
+        "ANDROID_SUPPORT_V4_VERSION": "27.1.0"
       },
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "Para ubicarte"
