--- a/package.json
+++ b/package.json
@@ -28,22 +28,24 @@
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "^2.0.1",
     "build": "^0.1.4",
+    "cordova-android": "~6.3.0",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.7",
-    "cordova-plugin-facebook4": "^1.9.1",
+    "cordova-plugin-facebook4": "^1.10.1",
     "cordova-plugin-geolocation": "^2.4.3",
-    "cordova-plugin-googlemaps": "^2.2.6",
-    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-googlemaps": "^2.3.6",
+    "cordova-plugin-ionic-webview": "^1.2.1",
     "cordova-plugin-splashscreen": "^4.1.0",
     "cordova-plugin-whitelist": "^1.3.3",
-    "cordova-sqlite-storage": "^2.2.1",
+    "cordova-sqlite-storage": "^2.3.3",
     "ionic-angular": "3.8.0",
     "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
+    "minimist": "^1.2.0",
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
-    "zone.js": "0.8.18",
-    "cordova-android": "~6.3.0"
+    "xml2js": "^0.4.19",
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.1",
@@ -62,14 +64,13 @@
         "APP_NAME": "ubicashDev"
       },
       "cordova-sqlite-storage": {},
-      "cordova-plugin-googlemaps": {
-        "API_KEY_FOR_ANDROID": "AIzaSyBIKuWGRoLfe1sLuMG72_6QwVlmGBMJoNY",
-        "API_KEY_FOR_IOS": "AIzaSyBIKuWGRoLfe1sLuMG72_6QwVlmGBMJoNY",
-        "PLAY_SERVICES_VERSION": "11.8.0",
-        "ANDROID_SUPPORT_V4_VERSION": "27.1.0"
-      },
       "cordova-plugin-geolocation": {
         "GEOLOCATION_USAGE_DESCRIPTION": "Para ubicarte"
+      },
+      "cordova-plugin-googlemaps": {
+        "API_KEY_FOR_ANDROID": "AIzaSyBIKuWGRoLfe1sLuMG72_6QwVlmGBMJoNY",
+        "PLAY_SERVICES_VERSION": "15.0.1",
+        "ANDROID_SUPPORT_V4_VERSION": "26.1.0"
       }
     },
     "platforms": [
