--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@ionic-native/status-bar": "4.3.2",
     "@ionic/storage": "^2.0.1",
     "build": "^0.1.4",
+    "cordova-android": "6.3.0",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-facebook4": "^1.10.1",
@@ -44,8 +45,7 @@
     "rxjs": "5.4.3",
     "sw-toolbox": "3.6.0",
     "xml2js": "^0.4.19",
-    "zone.js": "0.8.18",
-    "cordova-android": "~6.3.0"
+    "zone.js": "0.8.18"
   },
   "devDependencies": {
     "@ionic/app-scripts": "3.0.1",
